[project]
name = "seokbong_division"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
seokbong_division = 'seokbong_division.division:divide'

[tool.pdm]
distribution = true
